<resources>
    <string name="ok_btn_text" formatted="false">OK</string>
    <string name="cancel_btn_text"  formatted="false">Cancel</string>
    <string name="submit_btn_text"  formatted="false">Submit</string>
    <string name="punch_btn_text"  formatted="false">Punch</string>
    <string name="punch_comment_hint"  formatted="false">Comment</string>
    <string name="punch_recent_hint_text"  formatted="false">RECENT ACTIVITY</string>
    <string name="punch_no_recent_hint_text"  formatted="false">No recent activity.</string>
    <string name="punch_no_comment_text"  formatted="false">No comment.</string>
    <string name="activity_punch_title"  formatted="false">Time Punch</string>
    <string name="default_org_level_hint_text"  formatted="false">Default Org Level</string>
    <string name="clock_default_time_text"  formatted="false">00:00</string>
    <string name="clock_default_am_pm_text"  formatted="false">AM</string>
    <string name="punch_no_available_hint_text"  formatted="false">Punch functionality not available</string>
    <string name="organization_levels_hint_text"  formatted="false">Organization Levels</string>
    <string name="no_switch_text"  formatted="false">No</string>
    <string name="yes_switch_text"  formatted="false">Yes</string>
    <string name="today_punch_text"  formatted="false">Today</string>
    <string name="yesterday_punch_text"  formatted="false">Yesterday</string>
    <string name="offline_mode_submitted_punch_text"  formatted="false">Punch saved. Connection required.</string>
    <string name="not_connected_punch_submission_text"  formatted="false">No internet connection available.</string>
    <string name="select_category_error_text"  formatted="false">Please select a punch category.</string>
    <string name="punch_submission_error_text"  formatted="false">Service Unavailable. Please try again later.</string>
    <string name="n_a_punch_text"  formatted="false">N/A</string>
    <string name="select_punch_category_hint_text"  formatted="false">Select a punch category&#8230;</string>
    <string name="punch_tab_text"  formatted="false">PUNCH</string>
    <string name="transfer_tab_text"  formatted="false">TRANSFER</string>
    <string name="no_org_items_text"  formatted="false">No Organization Items found</string>
    <string name="search_org_items_text"  formatted="false">Search</string>
    <string name="activity_time_off_requests_title"  formatted="false">Time Off Requests</string>
    <string name="activity_time_off_submit_title"  formatted="false">Create Request</string>
    <string name="activity_time_off_add_dates_title"  formatted="false">Add Dates</string>
    <string name="activity_time_off_request_details_title"  formatted="false">Request Details</string>
    <string name="accrued_as_of_date"  formatted="false">Balance as of %s</string>
    <string name="time_off_date"  formatted="false">Date</string>
    <string name="time_off_hours"  formatted="false">Hours</string>
    <string name="time_off_pay_type"  formatted="false">Pay Type</string>
    <string name="time_off_scheduling"  formatted="false">Scheduling</string>
    <string name="time_off_no_comment_text"  formatted="false">No comment.</string>
    <string name="time_off_select_recipient_hint_text"  formatted="false">Select Recipients</string>
    <string name="time_off_no_requests"  formatted="false">You currently have no personal requests.</string>
    <string name="time_off_no_dates"  formatted="false">You have not requested any dates.</string>
    <string name="time_off_menu_add_request"  formatted="false">Add Request</string>
    <string name="time_off_submitted_date"  formatted="false">Submitted Date</string>
    <string name="time_off_comment_text"  formatted="false">Comment</string>
    <string name="time_off_unanswered"  formatted="false">Unanswered</string>
    <string name="time_off_request_not_ready_text"  formatted="false">Time Off Request not ready yet.</string>
    <string name="view_range_text"  formatted="false">View Range</string>
    <string name="range_to_text"  formatted="false">to</string>
    <string name="time_off_submitted_date_text"  formatted="false">Submitted</string>
    <string name="time_off_status_text"  formatted="false">Status</string>
    <string name="time_off_submit_text"  formatted="false">Submit</string>
    <string name="time_off_add_date_text"  formatted="false">Add Date</string>
    <string name="time_off_add_date_cap_text"  formatted="false">ADD REQUEST DATE</string>
    <string name="time_off_submit_to_text"  formatted="false">Submit To</string>
    <string name="time_off_start_time_text"  formatted="false">Start Time</string>
    <string name="time_off_hours_per_day_text"  formatted="false">Hours Per Day</string>
    <string name="time_off_schedule_text"  formatted="false">Scheduling</string>
    <string name="time_off_empty_dates_error_text"  formatted="false">Please select at least one date to add.</string>
    <string name="max_recipient_selected_error"  formatted="false">%d recipients maximum</string>
    <string name="min_recipient_selected_error"  formatted="false">%d recipients minimum</string>
    <string name="date_removed_hint_text"  formatted="false">Date removed</string>
    <string name="action_undo_text"  formatted="false">Undo</string>
    <string name="time_off_total_hours_text"  formatted="false">Total Hours</string>
    <string name="time_off_request_dates_hint_text"  formatted="false">Request Date(s)</string>
    <string name="time_off_request_responses_hint_text"  formatted="false">Responses</string>
    <string name="time_off_no_date_error_text"  formatted="false">Please select at least one date.</string>
    <string name="time_off_zero_hours_error_text"  formatted="false">You can not request zero (0) hours of time off.</string>
    <string name="time_off_negative_balance_error_text"  formatted="false">Negative balances not allowed.</string>
    <string name="time_off_select_recipient_error_text"  formatted="false">Please select recipients.</string>
    <string name="time_off_request_submitted_text"  formatted="false">Request submitted.</string>
    <string name="time_off_request_submission_failed_error_text"  formatted="false">Error submitting, please try again later.</string>
    <string name="time_off_discard_new_request_text"  formatted="false">Your changes have not been submitted. Press OK to continue without submitting those changes.</string>
    <string name="time_off_service_error_text"  formatted="false">@string/punch_submission_error_text</string>
    <string name="day_name_format"  formatted="false">EEEEE</string>
    <string name="time_off_request_details_error_text"  formatted="false">There was an error retrieving the request</string>
    <string name="withdrawn_request_red_text"  formatted="false">You have withdrawn this request</string>
    <string name="cancelled_request_red_text"  formatted="false">You have cancelled this request</string>
    <string name="withdrawn_request_to_approve_red_text"  formatted="false">This is a request for cancellation</string>
    <string name="select_hours_per_day_text"  formatted="false">Select hours per day</string>
    <string name="activity_time_off_approvals_title"  formatted="false">Time Off Approvals</string>
    <string name="activity_time_off_approval_details_title"  formatted="false">Time Off Approval Details</string>
    <string name="activity_time_off_approve_title"  formatted="false">Approve Request</string>
    <string name="activity_time_off_decline_title"  formatted="false">Decline Request</string>
    <string-array name="time_off_approval_tabs"  formatted="false">
        <item>REQUESTS</item>
        <item>APPROVED</item>
        <item>DECLINED</item>
    </string-array>
    <string name="time_off_no_approval_requests"  formatted="false">You currently have no employee requests.</string>
    <string name="approve_request_button_text"  formatted="false">Approve</string>
    <string name="decline_request_button_text"  formatted="false">Decline</string>
    <string name="approve_request_code_text"  formatted="false">APPR</string>
    <string name="decline_request_code_text"  formatted="false">DECL</string>
    <string name="time_off_calendar_text"  formatted="false">Calendar</string>
    <string name="time_off_details_text"  formatted="false">Request details</string>
    <string name="decline_request_confirmation_text"  formatted="false">You are about to decline this request. Do you want to proceed?</string>
    <string name="select_recipients_hint_text"  formatted="false">Tap to select recipients</string>
    <string name="time_off_approval_service_error_text"  formatted="false">There was an error trying to submit the request</string>
    <string name="time_off_send_request_to_text"  formatted="false">Send Request To</string>
    <string name="time_off_response_text"  formatted="false">Response</string>
    <string name="recipients_selection_required_text"  formatted="false">This field is required</string>
    <string name="activity_time_review_title"  formatted="false">Timesheet</string>
    <string name="activity_time_entry_supervisor_title"  formatted="false">Time Management</string>
    <string name="total_hours_summary_text"  formatted="false">SUMMARY</string>
    <string name="total_hours_date_text"  formatted="false">@string/time_off_date</string>
    <string name="total_hours_type_text"  formatted="false">Type</string>
    <string name="total_hours_hours_text"  formatted="false">@string/time_off_hours</string>
    <string name="total_hours_hint_text"  formatted="false">TOTAL HOURS</string>
    <string name="hours_hint_text"  formatted="false">HOURS</string>
    <string name="punches_hint_text"  formatted="false">PUNCHES</string>
    <string name="service_not_available_error_text"  formatted="false">Service currently not available. Please try again later.</string>
    <string name="supervisor_approved_text"  formatted="false">SUPERVISOR APPROVED</string>
    <string name="employee_approved_text"  formatted="false">EMPLOYEE APPROVED</string>
    <string name="unapprove_link_text"  formatted="false">Unapprove?</string>
    <string name="employee_approve_btn_text"  formatted="false">Employee approve</string>
    <string name="supervisor_approve_btn_text"  formatted="false">Supervisor approve</string>
    <string name="no_information_found_text"  formatted="false">There are no records in this date range to display.</string>
    <string name="current_pay_period_text"  formatted="false">Current Pay Period</string>
    <string name="actual_date_header_text"  formatted="false">Actual Date</string>
    <string name="eff_date_header_text"  formatted="false">Eff. Date</string>
    <string name="effective_date_header_text"  formatted="false">Effective Date</string>
    <string name="start_time_header_text"  formatted="false">Start Time</string>
    <string name="stop_time_header_text"  formatted="false">Stop Time</string>
    <string name="start_date_time_header_text"  formatted="false">Start Date/Time</string>
    <string name="stop_date_time_header_text"  formatted="false">Stop Date/Time</string>
    <string name="start_type_header_text"  formatted="false">Start Type</string>
    <string name="stop_type_header_text"  formatted="false">Stop Type</string>
    <string name="dollars_header_text"  formatted="false">Dollars</string>
    <string name="summary_menu_text"  formatted="false">Summary</string>
    <string name="details_menu_text"  formatted="false">Detail</string>
    <string name="punches_menu_text"  formatted="false">Punches</string>
    <string name="hours_menu_text"  formatted="false">Hours</string>
    <string name="dollars_menu_text"  formatted="false">Dollars</string>
    <string name="name_header_text"  formatted="false">Name</string>
    <string name="employee_approved_header_text"  formatted="false">Employee\nApproved</string>
    <string name="total_header_text"  formatted="false">Total</string>
</resources>