<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:padding="@dimen/full_margin">

    <TextView
        android:id="@+id/recipientsHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_off_send_request_to_text"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/recipientsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/full_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:background="@drawable/time_off_approval_comment_bg"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_recipients"
        android:ellipsize="end"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/time_off_select_recipient_hint_text"
        android:padding="@dimen/half_margin"
        android:textSize="@dimen/text_large"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/commentHeaderText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientsHeaderText"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/commentHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:text="@string/time_off_response_text"
        app:layout_constraintBottom_toTopOf="@+id/commentField"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/commentField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/full_margin"
        android:background="@drawable/time_off_approval_comment_bg"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_punch_comment_grey"
        android:hint="@string/punch_comment_hint"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
        android:maxLength="2000"
        android:maxLines="5"
        android:minLines="1"
        android:padding="@dimen/half_margin"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="4dp"
            android:layout_weight=".5"
            android:background="@drawable/button_grey"
            android:text="@string/cancel_btn_text"
            android:textColor="@color/text_white"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_weight=".5"
            android:background="@drawable/button_orange"
            android:text="@string/submit_btn_text"
            android:textColor="@color/text_white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>