<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="@dimen/half_margin"
    tools:context="com.insperity.escmobile.view.fragment.PunchCategoriesFragment">

    <include layout="@layout/widget_footnote"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/punchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/full_margin">

        <Spinner
            android:id="@+id/categorySpinner"
            style="@style/AppTheme.PunchSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/full_margin"
            app:layout_constraintBottom_toTopOf="@+id/commentField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/commentField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/full_margin"
            android:background="@drawable/punch_comment_bg"
            android:gravity="top"
            android:hint="@string/punch_comment_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
            android:maxLength="2000"
            android:padding="5dp"
            android:textColorHint="@color/text_grey_light"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/defaultOrgLevelSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/defaultOrgLevelsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_org_level_hint_text"
            android:textSize="@dimen/text_small"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/defaultOrgLevelSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/defaultOrgLevelSwitch"
            tools:visibility="visible"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/defaultOrgLevelSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/full_margin"
            android:checked="true"
            android:textOff="@string/no_switch_text"
            android:textOn="@string/yes_switch_text"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/orgLevelHeaderText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/defaultOrgLevelsText"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/orgLevelHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_margin"
            android:text="@string/organization_levels_hint_text"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/orgLevelContainer"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"/>

        <LinearLayout
            android:id="@+id/orgLevelContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orgLevelHeaderText"
            android:layout_marginBottom="@dimen/full_margin"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/punchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/punchButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_orange"
            android:text="@string/punch_btn_text"
            android:textColor="@color/text_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>