<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/commonListItemStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/addDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/half_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus_circle_white_24dp"
            android:tint="@color/insperity_orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/quarter_margin"
            android:text="@string/time_off_add_date_cap_text"
            android:textColor="@color/text_grey"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/submit_to_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addDateButton"
        android:layout_marginBottom="@dimen/quarter_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/time_off_submit_to_text"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/submitToText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/quarter_margin"
            android:layout_weight=".7"
            android:hint="@string/time_off_select_recipient_hint_text"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Spinner
            android:id="@+id/submitToSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit_to_item"
        android:layout_marginBottom="@dimen/half_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/time_off_comment_text"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/commentField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLength="2000"
            android:maxLines="10"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>
